package eapli.base.app.backoffice.console.presentation.order;

import eapli.base.order.application.CreateProductOrderController;

public class CreateProductOrderUI implements Runnable{

    private final CreateProductOrderController ctrl = new CreateProductOrderController();


    @Override
    public void run() {

    }
}
