package eapli.base.order.repositories;

import eapli.base.order.domain.Order;
import eapli.framework.domain.repositories.DomainRepository;

public interface OrderRepository extends DomainRepository<Long, Order> {
}
