package eapli.base.product.repositories;

import eapli.base.product.domain.Product;
import eapli.framework.domain.repositories.DomainRepository;

public interface ProductRepository extends DomainRepository<Long, Product> {

}
